common1/kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pinaple
spec:
  ingressClassName: nginx
  rules:
  - host: pinaple-api-k
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name:  pinaple-api
            port:
              number: 443
  - host: pinaple-img-k
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name:  pinaple-img
            port:
              number: 443
  - host: pinaple-auth-k
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name:  pinaple-auth-fe
            port:
              number: 443
      - pathType: Prefix
        path: /api
        backend:
          service:
            name:  pinaple-auth-be
            port:
              number: 443
      - pathType: Prefix
        path: /authorize
        backend:
          service:
            name:  pinaple-auth-be
            port:
              number: 443
      - pathType: Prefix
        path: /token
        backend:
          service:
            name:  pinaple-auth-be
            port:
              number: 443
  - host: pinaple-app-k
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name:  pinaple-app-fe
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name:  pinaple-app-be
            port:
              number: 80
